ArC - Reduce allocations for injection points
The idea is to optimize allocations for this pattern in the _Bean
constructor (see `var5` being an `HashSet` for one element):

```java
HashSet var5 = new HashSet();
var5.add(Literal.INSTANCE);
Object var6 = null;
Object var7 = null;
var7 = Class.forName("io.smallrye.health.api.AsyncHealthCheck", false, Thread.currentThread().getContextClassLoader());
Type[] var8 = new Type[]{(Type)var7};
Class var9 = Class.forName("jakarta.enterprise.inject.Instance", false, Thread.currentThread().getContextClassLoader());
Object var10 = null;
var6 = new ParameterizedTypeImpl(var9, var8, (Type)var10);
this.injectProviderSupplier1 = new FixedValueSupplier(new InstanceProvider((Type)var6, var5, null, Set.of(), null, -1, false));
```

This is a follow-up of the work started here:
https://github.com/quarkusio/quarkus/pull/52839

It uses the same patterns.